--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is a simple bookstore server with a book inventory, users and a shopping cart.",
   "main": "index.js",
   "scripts": {
-	"prestart": "npm install",
-	"start": "node index.js"
+    "prestart": "npm install",
+    "start": "node index.js"
   },
   "keywords": [
     "swagger"
@@ -15,6 +15,8 @@
   "dependencies": {
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
+    "knex": "^0.16.5",
+    "lodash": "^4.17.11",
     "swagger-tools": "0.10.1"
   }
 }
