--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "js-yaml": "^3.3.0",
     "knex": "^0.16.5",
     "lodash": "^4.17.11",
+    "pg": "^7.11.0",
+    "serve-static": "^1.14.1",
     "swagger-tools": "0.10.1"
   }
 }
