--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-yaml": "^3.3.0",
     "knex": "^0.16.5",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "pg": "^7.11.0",
     "serve-static": "^1.14.1",
     "swagger-tools": "0.10.1"
